--- a/ReelChoiceHomepage/ReelChoiceHomepage.css
+++ b/ReelChoiceHomepage/ReelChoiceHomepage.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
-    background: url('background-movies.jpg') no-repeat center center fixed;
+    background: url('HomepageBg.jpg') no-repeat center center fixed;
     background-size: cover;
     color: white;
     height: 100vh;
