--- a/index.css
+++ b/index.css
@@ -13,13 +13,6 @@ body {
     margin-top: 20px;
 }
 
-.login-container form label {
-    display: block;
-    text-align: left;
-    margin-top: 10px;
-    margin-bottom: 5px;
-}
-
 .login-container {
     background-color: #2a2a34;
     padding: 30px;
@@ -28,28 +21,42 @@ body {
     border-radius: 10px;
     width: 300px;
     color: #f1b400;
+    /* Remove text-align: center; */
 }
 
 .login-container h2 {
-    margin-bottom: 20px;
     text-align: center;
+    margin-bottom: 20px;
 }
 
+/* Align labels and inputs properly */
+.login-container form {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch; /* make labels and inputs full width */
+}
+
+.login-container label {
+    text-align: left;
+    margin-bottom: 5px;
+    font-size: 14px;
+}
 
 .login-container input[type="email"],
 .login-container input[type="password"] {
     width: 100%;
     padding: 10px;
-    margin-top: 8px;
     margin-bottom: 15px;
     border-radius: 5px;
     border: none;
 }
 
+/* For password label and 'forgot password' link */
 .password-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 5px;
 }
 
 .password-container a {
