--- a/index.css
+++ b/index.css
@@ -22,12 +22,12 @@ body {
     width: 300px;
     color: #f1b400;
     display: flex;
-    flex-direction: column; /* Ensure all children stack vertically */
-    align-items: stretch; /* Ensure full width for child elements */
+    flex-direction: column; 
+    align-items: stretch; 
 }
 
 .login-container h2 {
-    text-align: center;
+    text-align: left;
     margin-bottom: 20px;
 }
 
@@ -45,11 +45,12 @@ body {
 
 .login-container input[type="email"],
 .login-container input[type="password"] {
-    width: 100%; /* Make the inputs take the full width */
+    width: 100%;
     padding: 10px;
-    margin-bottom: 15px;
-    border-radius: 5px;
+    margin-top: 10px;
     border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .password-container {
@@ -76,7 +77,7 @@ body {
     background-color: #f1b400;
     border: none;
     padding: 10px;
-    width: 100%; /* Ensure the button takes the full width */
+    width: 100%; 
     font-weight: bold;
     border-radius: 5px;
     margin-bottom: 10px;
