--- a/index.css
+++ b/index.css
@@ -89,8 +89,19 @@ body {
 }
 
 .divider {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 10px 0;
     color: gray;
+}
+
+.divider::before,
+.divider::after {
+    content: "";
+    flex: 1;
+    border-top: 1px solid gray;
+    margin: 0 10px;
 }
 
 .google-btn, .facebook-btn {
