--- a/index.css
+++ b/index.css
@@ -14,10 +14,9 @@ body {
     justify-content: center;
 }
 
-.logo {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 25px;
+.logo img {
+    width: 100px;
+    margin-top: 20px;
 }
 
 .login-container {
