--- a/index.css
+++ b/index.css
@@ -15,9 +15,14 @@ body {
 }
 
 .logo img {
-    width: 100px;
+    width: 200px; 
     margin-top: 20px;
+    position: absolute; 
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%); 
 }
+
 
 .login-container {
     background-color: #23232b;
