--- a/index.css
+++ b/index.css
@@ -10,10 +10,11 @@ body {
     display: flex;
     justify-content: center;  
     padding-top: 30px;  
+    margin-bottom: 20px;  
 }
 
 .logo img {
-    width: 200px;
+    width: 200px; 
 }
 
 .center-container {
@@ -21,7 +22,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh; 
+    min-height: 100vh;
 }
 
 .login-container {
@@ -35,10 +36,7 @@ body {
     flex-direction: column;
     align-items: stretch;
     box-shadow: 0 2px 24px rgba(0,0,0,0.1);
-    margin-top: 20px;  
 }
-
-
 
 
 .login-container h2 {
