--- a/index.css
+++ b/index.css
@@ -8,13 +8,14 @@ body {
 
 .logo-container {
     display: flex;
-    justify-content: center;  
-    padding-top: 30px;  
-    margin-bottom: 20px;  
+    justify-content: center; 
+    padding-top: 30px; 
+    margin-bottom: 0; 
 }
 
 .logo img {
     width: 200px; 
+    display: block; 
 }
 
 .center-container {
