--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between; /* Ensures space between the logo and form */
+    justify-content: space-between; 
 }
 
 .logo-container {
@@ -16,16 +16,17 @@ body {
 }
 
 .logo img {
-    width: 150px; /* Adjusted to a larger size */
+    width: 100px; 
     display: block; 
+    margin-bottom: 1; 
 }
 
 .center-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start; /* Makes sure the login form stays at the bottom */
-    flex-grow: 1; /* Takes remaining space in the body */
+    justify-content: flex-start; 
+    flex-grow: 1; 
 }
 
 .login-container {
