--- a/index.css
+++ b/index.css
@@ -6,19 +6,19 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between; 
+    justify-content: space-between; /
 }
 
 .logo-container {
     display: flex;
     justify-content: center;
     padding-top: 20px;  
+    margin-bottom: 20px; 
 }
 
 .logo img {
-    width: 100px; 
+    width: 120px; 
     display: block; 
-    margin-bottom: 1; 
 }
 
 .center-container {
@@ -27,6 +27,7 @@ body {
     align-items: center;
     justify-content: flex-start; 
     flex-grow: 1; 
+    padding-bottom: 20px; 
 }
 
 .login-container {
@@ -40,7 +41,7 @@ body {
     flex-direction: column;
     align-items: stretch;
     box-shadow: 0 2px 24px rgba(0,0,0,0.1);
-}
+    margin: 0 20px; 
 
 .login-container h2 {
     margin: 0 0 22px 0;
