--- a/index.css
+++ b/index.css
@@ -12,20 +12,20 @@ body {
 .logo-container {
     display: flex;
     justify-content: center;
-    padding-top: 20px;  
+    padding-top: 20px;
     margin-bottom: 20px; 
 }
 
 .logo img {
     width: 120px; 
-    display: block; 
+    display: block;
 }
 
 .center-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start; 
+    justify-content: flex-start;
     flex-grow: 1; 
     padding-bottom: 20px; 
 }
@@ -66,7 +66,7 @@ body {
 .login-container input[type="email"],
 .login-container input[type="password"] {
     width: 100%;
-    padding: 10px;
+    padding: 12px; 
     margin-top: 8px;
     border: none;
     border-radius: 5px;
@@ -74,6 +74,7 @@ body {
     color: #fff;
     margin-bottom: 12px;
     font-size: 15px;
+    box-sizing: border-box;
 }
 
 .password-container {
