--- a/index.css
+++ b/index.css
@@ -149,7 +149,7 @@ body {
     align-items: center;
     justify-content: center;
     margin: 18px 0 10px 0;
-    color: #fff;
+    color: #f1b400
     font-size: 15px;
 }
 
