--- a/index.css
+++ b/index.css
@@ -18,6 +18,14 @@ body::before {
   z-index: 0;
 }
 
+.title-image img {
+  width: 320px;
+  height: auto;
+  object-fit: contain;
+  margin-top: -40px;
+  margin-bottom: -30px; 
+}
+
 .menu-icon {
   position: absolute;
   top: 20px;
