--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ body::before {
 
 .title-image img {
   width: 300px;
-  height: auto;
+  height: 500px;
   object-fit: contain;
   margin-top: -40px;
   margin-bottom: -10px; 
