--- a/index.css
+++ b/index.css
@@ -18,12 +18,16 @@ body::before {
   z-index: 0;
 }
 
+.title-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 0;
+}
+
 .title-image img {
   width: 300px;
-  height: 500px;
-  object-fit: contain;
-  margin-top: -175px;
-  margin-bottom: -140px; 
+  height: auto;
 }
 
 .menu-icon {
