--- a/index.css
+++ b/index.css
@@ -18,18 +18,6 @@ body::before {
   z-index: 0;
 }
 
-.title-image {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 30px 0;
-}
-
-.title-image img {
-  width: 300px;
-  height: auto;
-}
-
 .menu-icon {
   position: absolute;
   top: 20px;
@@ -69,13 +57,25 @@ body::before {
   position: relative;
   z-index: 1;
   text-align: center;
-  top: 18%;
+  top: 20%;
+  transform: translateY(-10%);
 }
 
 .logo-image img {
   width: 160px;
   height: auto;
-  margin-bottom: -70px;
+  margin-bottom: 20px;
+}
+
+.title-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 40px 0 50px 0;
+}
+.title-image img {
+  width: 300px;
+  height: auto;
 }
 
 h1 {
@@ -87,7 +87,7 @@ h1 {
 }
 
 .buttons {
-  margin-top: -40px;
+  margin-top: 20px;
 }
 .buttons button {
   background-color: #f0b500;
