--- a/index.css
+++ b/index.css
@@ -54,11 +54,12 @@ body::before {
 }
 
 .container {
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 1;
   text-align: center;
-  top: 20%;
-  transform: translateY(-10%);
 }
 
 .logo-image img {
