--- a/index.css
+++ b/index.css
@@ -112,3 +112,63 @@ h1 {
 .buttons button:hover {
   background-color: #ffcc00;
 }
+
+.side-menu {
+  position: fixed;
+  top: 0;
+  left: -270px;
+  width: 270px;
+  height: 100%;
+  background-color: #1e1e22;
+  transition: left 0.3s ease;
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 60px;
+}
+
+.side-menu.active {
+  left: 0;
+}
+
+.side-menu ul {
+  list-style-type: none;
+  padding-left: 20px;
+  margin: 0;
+}
+
+.side-menu ul li {
+  margin: 20px 0;
+}
+
+.side-menu ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 500;
+  transition: color 0.2s;
+}
+
+.side-menu ul li a:hover {
+  color: #ff007f;
+}
+
+.menu-footer {
+  text-align: center;
+  padding: 20px;
+}
+
+.menu-footer img {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 5px;
+}
+
+.menu-footer span {
+  display: block;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+
