--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
-  background: url('HomepageBg.jpg') no-repeat center center fixed;
+  background: url('images/HomepageBg.jpg') no-repeat center center fixed;
   background-size: cover;
   color: white;
   height: 100vh;
