Update profile card bg color

--- a/profile/profile.css
+++ b/profile/profile.css
@@ -88,7 +88,7 @@ header {
 }
 
 .profile-card {
-  background-color: #381c35;
+  background-color: #721c3ec0;
   margin: auto;
   padding: 2rem;
   border-radius: 12px;
