Add Reel Roll page

--- a/profile/profile.css
+++ b/profile/profile.css
@@ -106,7 +106,7 @@ header {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  border: 3px solid gold;
+  border: 3px solid #F6B723;
 }
 
 .user-details {
